<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.a8zad.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/navigateToRegister"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/navigateToMainScreen"
            app:destination="@id/mainScreen" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.a8zad.ui.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/navigateToLogin"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/navigateToMainScreen"
            app:destination="@id/mainScreen" />
    </fragment>
    <fragment
        android:id="@+id/mainScreen"
        android:name="com.example.a8zad.ui.main.MainFragment"
        android:label="fragment_main_screen"
        tools:layout="@layout/fragment_main_screen" >
        <action
            android:id="@+id/navigateToLoginFromMain"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>